<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lblCargo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarSize="6dp"
    tools:context=".activity_empleado">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtCedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_cedula"
        android:inputType="number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_telefono"
        android:inputType="phone"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_direccion"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_cargo"
        android:textSize="24dp" />

    <Spinner
        android:id="@+id/spnCargo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/tipos_empleados"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/lblTurno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_turno"
        android:textSize="24dp" />

    <Spinner
        android:id="@+id/spnTurno"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contextClickable="true"
        android:entries="@array/turnos" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar" />

</LinearLayout>